# FLOUNDER

./: .gitignore  FLOUNDER HPC.yaml  FirstGEANT4Output.yaml  Installation Notes.yaml  Parameters.yaml  README.md  Simulation.yaml  dump_entry.C  gSeaGen Syntax.yaml  zshrc_backup.yaml
Docker/: Dockerfile
Paper/: Proposal for the High Energy Neutrino Telescope  main.tex
Simulations/: GEANT4_flounder.sh  fln_geo.gdml
Simulations/GEANT4data/: CMakeLists.txt  test.root
Simulations/GEANT4data/docs/day1/: GEANT4_day1_runbook.yaml  handcheck_summary.txt
Simulations/GEANT4data/docs/day2/: checksums_20250929_131756.txt  day2_capture.sh
Simulations/GEANT4data/docs/day3/: event_budget.csv  event_budget.csv.md5  manifest.yaml  summary.txt
Simulations/GEANT4data/include/: ActionInitialization.hh  DetectorConstruction.hh  Digitizer.hh  IO.hh  OpticalInit.hh  PhotonBudget.hh  PhotonCountActions.hh
Simulations/GEANT4data/macros/: day3_ccmu_200.mac
Simulations/GEANT4data/macros/day1/: hc.mac  hc_template.mac  vis_day1.mac  vis_multiview.mac  vis_offscreen.mac
Simulations/GEANT4data/macros/day2/: day2_sanity.mac  hc_headless.mac
Simulations/GEANT4data/optics/: pmt_qe.csv  water_properties.csv
Simulations/GEANT4data/src/: ActionInitialization.cc  Digitizer.cc  IO.cc  OpticalPropertiesLoader.cc  PhotonBudget.cc
Simulations/GEANT4data/tools/: HandCheck.ipynb
config/: flux.xml  mono_100GeV_flux.xml  water_cyl_3x40.geo.xml
detector/: CMakeLists.txt  GEANT4.sh
detector/config/: optics.yaml  optics_clear.yaml  optics_lake.yaml  optics_poor.yaml  pmt.yaml
detector/docs/day1/: GEANT4_day1_runbook.yaml  handcheck_summary.csv
detector/docs/day2/: manifest_20250929_131756.yaml
detector/include/: ActionInitialization.hh  DetectorConstruction.hh  Digitizer.hh  GeometryRegistry.hh  OpticalInit.hh  OpticalProperties.hh  OpticalPropertiesLoader.hh  PMTDigitizer.hh  PMTHit.hh  PMTSD.hh  PhotonCountActions.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RootrackerPrimaryGenerator.hh  RunAction.hh  RunManifest.hh
detector/macros/day1/: hc_headless.mac
detector/macros/day2/: vis_offscreen.mac
detector/src/: ActionInitialization.cc  DetectorConstruction.cc  Digitizer.cc  GeometryRegistry.cc  IO.cc  OpticalInit.cc  OpticalProperties.cc  OpticalPropertiesLoader.cc  PMTDigitizer.cc  PMTHit.cc  PMTSD.cc  PhotonBudget.cc  PhotonCountActions.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RootrackerPrimaryGenerator.cc  RunAction.cc  RunManifest.cc  main.cc  main_day2.cc
detector/tests/: test_dark_rate_poisson.sh  test_light_yield.cc  test_qe_sweep_ratio.sh  test_timing.cc  test_timing_burst_sigma.sh
detector/tools/: coverage_check.py  skim_gtrac.C
detector/tools/qc/: dark_rate.py  dark_rate_check.py  pe_yield.py  pe_yield_table.py  qc_day2.sh  qe_sweep.sh  ring_uniformity_parse.py  run_ctest.sh  run_darks.sh  run_pe_yield.sh  run_timing.sh  run_timing_burst.sh  run_timing_components.sh  run_timing_gun.sh  timing_sigma.py  week2_all.sh
docs/: Week-2-README.md
gseagen_sim/: test_nu_mu.root.100000000.binstat  test_nu_mu.root.100000000.geo-mu.root
gseagen_sim/flux/: nu_e_flux_100GeV.root
gseagen_sim/geometry/: flounder_geo.root
gseagen_sim/macros/: make_flounder_geo.C  make_flux_100GeV.C
gseagen_sim/output/: flounder_nu_mu.100000000.binstat  flounder_nu_mu.100000000.geo-el.root
macros/: make_geo.C  read_gSeaEvent.C
